--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -9,8 +9,10 @@
     "axios": "^1.2.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router": "^6.6.2",
     "react-router-dom": "^6.6.2",
     "react-scripts": "5.0.1",
+    "redirect": "^0.2.0",
     "sass": "^1.57.1",
     "web-vitals": "^2.1.4"
   },
@@ -37,5 +39,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "proxy": "http://localhost:3333"
 }
