--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "cookie-parser": "^1.4.6",
     "express": "^4.18.2",
+    "js-cookie": "^3.0.1",
     "nodemon": "^2.0.20",
     "path": "^0.12.7"
   }
